--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
 /__pycache__
 constrainttoactivecamera.code-workspace
+constraintcam/__pycache__/core.cpython-310.pyc
+constraintcam/__pycache__/ops.cpython-310.pyc
+constraintcam/__pycache__/props.cpython-310.pyc
+constraintcam/__pycache__/ui.cpython-310.pyc
+line_art_tools/__pycache__/__init__.cpython-310.pyc
+line_art_tools/__pycache__/core.cpython-310.pyc
+line_art_tools/__pycache__/ops.cpython-310.pyc
+line_art_tools/__pycache__/props.cpython-310.pyc
+line_art_tools/__pycache__/ui.cpython-310.pyc
